data/Java/08-bad-invocation/4/[M]Error.txt
*https://www.tutorialspoint.com/java/java_methods.htm
[E]This_Example.java:47: error: cannot find symbol
      int ret = obj2.print;
                    ^